--- a/index.html
+++ b/index.html
@@ -1134,6 +1134,12 @@
 					<img src="images/curemetric/220.jpg" alt="">
 					</a>
 				 </div>
+
+				 <div class="col-md-6 mt-3" style="margin-top: 10px;">
+					<a href="#">
+					<img src="images/curemetric/221.jpg" alt="">
+					</a>
+				 </div>
 			
 
 				
